# ros2_thesis

custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: Observations.msg
diff_drive_robot_gz_sim/launch/: ICTE4001_MRobot.launch.py  MRobot_base.launch.py  MRobot_control.launch.py  MRobot_sensor.launch.py
diff_drive_robot_gz_sim/world/: office_world.sdf
diff_drive_robot_gz_sim/world/Training_House/: model.config  model.sdf
diff_drive_robot_gz_sim/world/cube/: model.sdf
diff_drive_robot_gz_sim/world/cube2/: model.rsdf  model.sdf
diff_drive_robot_gz_sim/world/cube3/: model.rsdf  model.sdf
diff_drive_robot_gz_sim/world/cube4/: model.rsdf  model.sdf
diff_drive_robot_gz_sim/world/cube5/: model.rsdf  model.sdf
diff_drive_robot_gz_sim/world/office_wall/: model.sdf
gym_env/: data.csv  package.xml  setup.cfg  setup.py
gym_env/data/: rewards_data.csv
gym_env/gym_env/: buffer.py  core.py  customGymEnvMultiThread.py  custom_gym_env.py  custom_gym_env_nav2_controller.py  custom_gym_env_nav2_controllerTest.py  custom_gym_env_version_1.py  networks.py  sac.py  sac_gpu.py
gym_env/models/: TD3Trainer.py
gym_env/models/results/: DDPG_training_results.csv
gym_env/reinforcement/: ConvSACTrainer.py  ConvSACTrainerM.py  DDPGTrainer.py  PPOTrainer.py  SACTrainer.py  SacNav2.py  TD3Trainer.py  data.csv  plotData.py  reward_log.csv
gym_env/reinforcement/models/: PPO_trained_nav2_0.0001_4000
gym_env/reinforcement/results/: PPO_training_results_26_09_lr_0.0001_epLen_4000.csv  SAC_training_results_02_10_lr_0.0001_epLen_4000_bigger_reward.csv  SAC_training_results_02_10_lr_1e-05_epLen_4000.csv  SAC_training_results_06_10_lr_1e-05_epLen_4000_please.csv  SAC_training_results_15_09.csv  SAC_training_results_18_09_lr_0.0002_epLen_2000.csv  SAC_training_results_21_09_lr_0.0001_epLen_4000.csv  (+2 more)
gym_env/tests/: SACTrainer.py  plot_graph_same.py  test.py
iar_amcl_node/map/: office_ICTE4001_sim.pgm  office_ICTE4001_sim.yaml
iar_amcl_node/src/: iar_amcl_node.cpp
iar_amcl_node/stash_map/: office_ICTE4001_sim_new.pgm  office_ICTE4001_sim_new.yaml
nav2_mppi_controller/: CMakeLists.txt
nav2_mppi_controller/config/: nav2_params.yaml
nav2_mppi_controller/launch/: navigation_launch.py
nav2_pure_pursuit_controller/: CMakeLists.txt  nav2_pure_pursuit_controller.xml  package.xml
nav2_pure_pursuit_controller/config/: nav2_params.yaml
nav2_pure_pursuit_controller/src/: pure_pursuit_controller.cpp
nav2_sac_controller/: CMakeLists.txt  nav2_sac_controller.xml  package.xml
nav2_sac_controller/config/: nav2_params.yaml
nav2_sac_controller/include/nav2_sac_controller/: sac_controller.hpp  utils.hpp
nav2_sac_controller/launch/: navigation_launch.py
nav2_sac_controller/src/: sac_controller.cpp
robot_motion_controller/: package.xml  setup.cfg  setup.py
robot_motion_controller/robot_motion_controller/: Map_test.py  cuda_test.py  graph_path.py  map_test.py  person_follower.py  pose_listener.py  robot_path.py  robot_path_sub.py
(+8 files in other folders)
